force-app/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Impact__c.field-meta.xml
<CustomField>
    <fullName>pse__Impact__c</fullName>
    <description>The impact of the issue referenced in the project version.</description>
    <inlineHelpText>The impact of the issue referenced in the project version.</inlineHelpText>
    <label>Impact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>