force-app/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Name__c</fullName>
    <description>The name of the issue referenced in the project version.</description>
    <inlineHelpText>The name of the issue referenced in the project version.</inlineHelpText>
    <label>Issue Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>