force-app/main/default/objects/pse__VersionItem_Issue__c/fields/pse__IssueOwnerId__c.field-meta.xml
<CustomField>
    <fullName>pse__IssueOwnerId__c</fullName>
    <description>The Id for resource assigned as the owner of the issue referenced in the project version.</description>
    <inlineHelpText>The Id for resource assigned as the owner of the issue referenced in the project version.</inlineHelpText>
    <label>Issue Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>