force-app/main/default/objects/pse__VersionItem_Issue__c/fields/pse__Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Priority__c</fullName>
    <description>The priority status of the issue referenced in the project version.</description>
    <inlineHelpText>The priority status of the issue referenced in the project version.</inlineHelpText>
    <label>Priority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>